# cresp-templates

./: LICENSE  README.md
templates/: README.md
templates/python/: README.md
templates/python/default/: .gitignore  README.md  cookiecutter.json  environment.yml  pyproject.toml
templates/python/default/hooks/: post_gen_project.py  pre_gen_project.py
templates/python/default/hooks/tomli_w-1.2.0.dist-info/: RECORD
templates/python/default/notebooks/: example.ipynb
templates/python/default/src/: __init__.py  main.py
templates/python/default/{{cookiecutter.directory_name}}/: README.md  cresp.toml  environment.yml  pyproject.toml
templates/python/default/{{cookiecutter.directory_name}}/data/: README.md
templates/python/default/{{cookiecutter.directory_name}}/docs/: README.md
templates/python/default/{{cookiecutter.directory_name}}/src/: __init__.py  main.py
templates/python/default/{{cookiecutter.directory_name}}/tests/: test_example.py
