[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">={{ cookiecutter.python_version }},<4.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.2.0"
scipy = "^1.10.0"
plotly = "^5.13.0"
jupyterlab = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"
nbconvert = "^7.2.0"

[tool.black]
line-length = 88
target-version = ['py{{ cookiecutter.python_version.replace(".", "") }}']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 